# newrelic-python-agent

./: .coveragerc  .gitignore  .mega-linter.yml  .pre-commit-config.yaml  .python-version  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  DEVELOP  INSTALL  LICENSE  MANIFEST.in  Makefile  Makefile.in  PROCESS.md  PROCESS.rst  README  README.md  README.rst  ROADMAP.md  THIRD_PARTY_NOTICES.md  TSRM.h  VERSION  application.c  ascii-check.py  asv.conf.json  build-all.sh  build.sh  check.py  codecov.yml  config.h.in  configure  configure.in  daemon_protocol.c  generic_object.c  harvest.c  license_reviewer.py  logging.c  metric_table.c  newrelic.ini  (+18 more)
.claude/: CLAUDE.md
.codeboarding/: Agent Core & Configuration.md  Data Management & Communication.md  Instrumentation API.md  Specific Integrations & Hooks.md  on_boarding.md
.devcontainer/: Dockerfile  devcontainer.json
.fleetControl/: agentControlDefinitions.yml  configurationDefinitions.yml
.fleetControl/schemaGeneration/: README.md  (+4 more)
.github/: .trivyignore  CODEOWNERS  LICENSE_HEADER  actionlint.yml  codecov.yml  dependabot.yml  mergify.yml  pull_request_template.md  stale.yml
agent/: README.txt  application.c  application_data.h  application_funcs.h  config.h  daemon_protocol.c  daemon_protocol_data.h  daemon_protocol_funcs.h  environment.c  environment_funcs.h  fixups.h  generic_object.c  generic_object_data.h  generic_object_funcs.h  genericobject.c  globals.c  globals.h  harvest.c  harvest_data.h  harvest_funcs.h  logging.c  logging.h  metric_table.c  metric_table_data.h  metric_table_funcs.h  newrelic.c  nrbuffer.c  nrconfig.h  nrthread.c  params.c  params_data.h  params_funcs.h  php_newrelic.h  samplers.c  samplers_funcs.h  utils.c  web_transaction.c  web_transaction_data.h  web_transaction_funcs.h  wt_error.c  (+6 more)
benchmarks/: README.md  current_transaction.py  framework_django.py  initialize.py  log_formatting.py  metric_normalization.py  outbound_cat.py  parse_dt_headers.py  record_transaction.py  time_traces.py  transaction_enter.py  transaction_exit.py  util.py  web_transaction_init.py  wrapped_coroutine_send.py  wsgi_application_iterable.py  wsgi_application_middleware.py  wsgi_application_wrapper.py
compilers/: Makefile  buildout-darwin.cfg  buildout-freebsd.cfg  buildout.cfg
dependabot/: requirements.txt
deploy/: .pypirc  Dockerfile  README  cleanup-root-files.sh  common.sh  deploy-to-download.sh  deploy-to-pypi.sh  deploy-to-s3.sh  download-from-artifactory.sh  remove-from-s3.sh  undeploy-from-s3.sh  upload-to-artifactory.sh  upload-to-download-site.sh  upload-to-pypi.sh  upload-to-s3.sh
docker/: README  docker-compose.yml  environ  packnsend  wait-for-ready.sh
hudson/: build.sh  multi-build.sh
hudson-scripts/: multi-build.sh
jenkins/: README.md  benchmark.groovy  build-deploy.groovy  extract_changed.py  fetch_snakeyaml.sh  misc-jobs.groovy  packnsend-buildnpush.sh  parse_integration_test_tox_files.py  prep_node_for_test.sh  refresh_docker_containers.sh  reseed-pr.groovy  setup_node.sh  test-global.groovy  test-integration-config.yml  test-integration.groovy  test-pipeline-config.json  test-pipeline-config.yml  test-pipeline.groovy  test-pr.groovy  test-unit.groovy  test_parse_integration_test_tox_files.py  tool-jobs.groovy
license_data/: license_config.ini  license_ignore.txt  license_info.json  license_source_map.json
load-tests/: test_load_test_01.py  test_load_test_02.py  test_load_test_03.py
newrelic/: LICENSE  THIRD_PARTY_NOTICES.md  __init__.py  _version.py  admin.py  agent.py  applications.py  build.py  config.py  console.py  database_dbapi2.py  decorators.py  external_feedparser.py  fixups.py  fixups_django.py  framework_django.py  framework_flask.py  framework_web2py.py  frameworks.py  memcache_memcache.py  memcache_pylibmc.py  middleware.py  newrelic.ini  patch.py  platform.py  profile.py  settings.py  template_jinja2.py  test.py
notebooks/: README.md
package/: INSTALL  newrelic.ini  setup.py
python-tools/: Makefile  Makefile.in  README  buildout-darwin.cfg  buildout-linux.cfg  buildout-sunos.cfg  buildout.cfg  buildout.cfg.in  configure  configure.in  i386-apple-darwin.cfg  i686-pc-linux-gnu.cfg  x86_64-unknown-linux-gnu.cfg
scripts/: azure-prebuild.sh  new_vectorstore_adder.py  newrelic-admin  newrelic-console
tests/: base_requirements.txt  test-1.py  test-2.py  test-3.py  test-4.py  test-5.py  test-6.py  test_application_01.py  test_background_task_01.py  test_custom_metric_01.py  test_harvest_01.py  test_web_transaction_01.py
unit-tests/: nose.ini  run-tox.py  test_application.py  test_application_01.py  test_background_task.py  test_background_task_01.py  test_custom_metric.py  test_custom_metric_01.py  test_database_trace.py  test_database_trace_01.py  test_error_trace.py  test_external_trace.py  test_external_trace_01.py  test_function_trace.py  test_function_trace_01.py  test_harvest.py  test_in_function.py  test_in_function_01.py  test_memcache_trace.py  test_memcache_trace_01.py  test_out_function.py  test_out_function_01.py  test_pass_function_01.py  test_post_function.py  test_post_function_01.py  test_pre_function.py  test_pre_function_01.py  test_web_transaction.py  test_web_transaction_01.py  test_wrap_object.py  test_wrap_object_01.py  test_wsgi_application.py  test_wsgi_application_01.py
wrapper/: _newrelicmodule.c  py_application.c  py_application.h  py_background_task.c  py_background_task.h  py_config.h  py_database_trace.c  py_database_trace.h  py_error_trace.c  py_error_trace.h  py_exceptions.c  py_exceptions.h  py_external_trace.c  py_external_trace.h  py_function_trace.c  py_function_trace.h  py_global_settings.c  py_global_settings.h  py_import_hook.c  py_import_hook.h  py_in_function.c  py_in_function.h  py_log_file.c  py_log_file.h  py_memcache_trace.c  py_memcache_trace.h  py_name_transaction.c  py_name_transaction.h  py_object_wrapper.c  py_object_wrapper.h  py_out_function.c  py_out_function.h  py_params.c  py_params.h  py_pass_function.c  py_pass_function.h  py_post_function.c  py_post_function.h  py_pre_function.c  py_pre_function.h  (+16 more)
(+2439 files in other folders)
